--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+python-semantic-release = "^7.33.1"
+semver = "^2.13.0"
 
 
 [build-system]
